--- a/mapcss.css
+++ b/mapcss.css
@@ -15,6 +15,9 @@ body {
     background-position: center;
     background-attachment: fixed;
     box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #map-container {
@@ -34,10 +37,8 @@ svg {
 }
 
 .dialog-box {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    font-family: 'Josefin Sans', sans-serif;
+    margin: 20px;
     background: rgba(0, 0, 0, 0.8);
     color: white;
     padding: 20px;
@@ -46,7 +47,7 @@ svg {
     display: none;
     z-index: 1000;
     text-align: center;
-    max-width: 33%; /* Max width is one-third of the screen */
+    max-width: 400px;
     width: auto; /* Allow the box to shrink if the content is small */
     overflow: auto; /* Enable scrolling if content overflows */
     max-height: 90vh; /* Prevent it from exceeding 90% of viewport height */
