--- a/scrolls.css
+++ b/scrolls.css
@@ -42,6 +42,8 @@ h2.header-title {
 .warscroll-section {
     position: relative;
     margin-bottom: 3rem;
+    display: flex;
+    align-items: center;
 }
 
 .warscroll-container {
@@ -73,12 +75,11 @@ h2.header-title {
 
 /* Navigation Buttons for Warscroll */
 .nav-btn {
-    position: absolute;
-    top: 50%;
+    /* position: absolute;
+    top: 50%; */
     z-index: 10;
-    width: 3.5rem;
-    height: 3.5rem;
-    transform: translateY(-50%);
+    width: 3.5em;
+    height: 3.5em;
     font-size: 16px;
     color: white;
     background-color: black;
