--- a/styles.css
+++ b/styles.css
@@ -266,7 +266,7 @@ div {
     display: inline-block;
     width: auto;
     /* Fixed width for labels */
-    margin-right: 10px;
+    /* margin-right: 10px; */
     /* Space between the label and the input */
 }
 
@@ -278,7 +278,11 @@ div {
 }
 
 .stat-input {
+    flex: 1;
     margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
 }
 
 h2 {
@@ -313,8 +317,10 @@ select {
 }
 
 #bottomSections {
-    margin: 20px 30px 30px;
+    margin: 30px;
+    gap: 30px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
     /* Ensure no overflow */
@@ -325,6 +331,8 @@ select {
 
 #companyStats,
 #companyActions {
+    display: table;
+    min-width: 260px;
     flex: 1;
     background-color: rgba(0, 0, 0, 0.9);
     /* Maintain background consistency */
@@ -342,29 +350,18 @@ select {
     /* Gradient fading to invisible */
 }
 
-#companyStats {
-    margin-right: 10px;
-}
-
-#companyActions {
-    margin-left: 10px;
-}
-
 /* Flexbox container for stats and bonus */
 .stats-bonus-container {
     display: flex;
+    flex-wrap: wrap;
+    width: 100%;
     justify-content: space-between;
+    text-align: center;
     /* Space between inputs and dropdown */
     gap: 20px;
     /* Space between the sections */
 }
 
-/* Ensure both stats and dropdown sections take equal width */
-.stats-container,
-.bonus-container {
-    flex: 1;
-    /* Equal width for both sections */
-}
 #laManoBox {
     background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent black background */
     color: white;
@@ -646,8 +643,9 @@ button:disabled {
 
 /* Court section styling */
 .court-container {
+    justify-content: center;
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Two columns */
+    grid-template-columns: repeat(2, minmax(0, 1fr));
     gap: 20px; /* Space between members */
 }
 
